# edsl-typeclasses

./: README.md  edsl-typeclasses.cabal
src/Prelude/: EDSLTypeclasses.hs
src/Prelude/EDSLTypeclasses/: BoolC.hs  Eq.hs  Ord.hs  OrderingC.hs
