name:                edsl-typeclasses
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/qsctr/edsl-typeclasses
license:             MIT
license-file:        LICENSE
author:              Bretton
maintainer:          brettonchen@gmail.com
copyright:           2017 Bretton
category:            Prelude
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Prelude.EDSLTypeclasses
                     , Prelude.EDSLTypeclasses.BoolC
                     , Prelude.EDSLTypeclasses.OrderingC
                     , Prelude.EDSLTypeclasses.Eq
                     , Prelude.EDSLTypeclasses.Ord
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010
  ghc-options:         -Wall

source-repository head
  type:     git
  location: https://github.com/qsctr/edsl-typeclasses
